# FinLLM

./: .gitignore  1_INTERVIEW_GUIDE.md  2_METHODOLOGY_AND_FLOW.md  3_ARCHITECTURE_AND_FLOW.md  MODEL_CARD.md  QUICK_REFERENCE.md  README.md  README_CHATBOT_DOCS.md  finance_tokenizer.model  finance_tokenizer.vocab  k10data.py  l.py  moredata.py  pyproject.toml  reducer.py  requirements.txt  run.md  test_chatbot.py  tokenizer.py  trainingcorpus.py
configs/: finance_modern_cpu.json  finance_modern_sft_cpu.json  finance_sft_quick_test.json  finance_sft_tiny_cpu.json  finance_small.json  finance_tiny_cpu.json
scripts/: build_instruction_corpus.py  build_retrieval_index.py  deploy_app.py  prepare_dataset.py  quick_sample.py  run_webapp.py  train_tokenizer.py
src/finllm/: __init__.py  assistant.py  checkpoint.py  config.py  data.py  evaluate.py  generate.py  knowledge.py  model.py  ollama_backend.py  retrieval.py  tokenizer.py  train.py  utils.py
src/finllm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_data.py  test_instruction_builder.py  test_model.py  test_retrieval_assistant.py  test_webapp.py
webapp/: __init__.py  server.py
webapp/static/: app.js  index.html  styles.css
